<resources>
    <string name="app_name">demoAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_subject">Add Subject</string>
    <string name="update_subject">Update Subject</string>
    <string name="subject">subject</string>
    <string name="anime">Anime</string>
    <string name="exit">Thoát</string>
    <string name="view_holder">View Holder</string>
    <string name="profile">Tài Khoản</string>
    <string name="register">Đăng Ký</string>
    <string name="login">Đăng Nhập</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="user_name">Tài Khoản :</string>
    <string name="getUser">Nhập tài khoản</string>
    <string name="Password">Mật Khẩu :</string>
    <string name="getPassword">Nhập Mật Khẩu</string>
    <string name="textTop">Already Hava an Account ?</string>
    <string name="welcome_back">WelCome back !</string>
    <string name="login_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="good_morign">Good Morning</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_night">Good Night</string>

    <string name="forgot_password">Forgot Password ?</string>
</resources>