<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginTop="50dp"
       android:layout_marginLeft="25dp"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        android:textSize="18sp"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/getUser"
        app:layout_constraintLeft_toRightOf="@+id/textViewUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp" />
    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/Password"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp" />
    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:textSize="18sp"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/getPassword"
        app:layout_constraintLeft_toRightOf="@+id/textViewPass"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>